...
                .tint(.white)
                .padding(.vertical)
                .frame(maxWidth: .infinity)
                .background(.customPrimary)
                .clipShape(RoundedRectangle(cornerRadius: 20))
        }
        .accessibilityIdentifier("guideSignUpButton")
    }

    var signinBar: some View {
        HStack {
            Text("Already have an account?")
            NavigationLink(destination: SigninView()) {
                Text("Sign in")
                    .foregroundStyle(.customPrimary)
                    .fontWeight(.semibold)
            }
            .zIndex(1)
            .accessibilityIdentifier("guideSignInButton")
        }
    }
}

#Preview {
    NavigationStack {
...
